k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secnotes-api
  labels:
    app.kubernetes.io/name: secnotes-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: secnotes-api
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
